added csv upload option for users

--- a/views/layout.html
+++ b/views/layout.html
@@ -35,6 +35,7 @@
 			<%} else {%>
 				<li><a href="/">Home</a></li>
 				<li><a href="/about">About</a></li>
+				<li><a href="/admin">Admin</a></li>
 			<%}%>
           </ul>
           
