--- a/views/messages.html
+++ b/views/messages.html
@@ -1,6 +1,6 @@
 <% if (hasMessages) { %>
     <% messages().forEach(function(msg){ %>
-    	<div class="alert-message info">
+    	<div class="alert-message warning">
     		<a class="close" href="#">×</a>
     		<p><%- msg %></p>
     	</div>
