admin email as variable, fixed csv upload express includes

--- a/views/404.html
+++ b/views/404.html
@@ -3,7 +3,7 @@
 
 <div class="span16 columns">
 
-	<p>Sorry! We were unable to find this page. If you think this is an error, <a href="mailto:hbrodbeck@gmail.com?subject=Charity Campaign 500">email the admin</a>.</p>
+	<p>Sorry! We were unable to find this page. If you think this is an error, <a href="mailto:<%=adminEmail%>?subject=Charity Campaign 500">email the admin</a>.</p>
 
 </div>
 
