--- a/views/500.html
+++ b/views/500.html
@@ -4,7 +4,7 @@
 <div class="span16 columns">
 	<p>Wow. That's embarrassing... an error has occurred. Please try refreshing the page or navigate back to <a href="/">home</a>.</p>
 
-	<p>If it's not too much trouble, <a href="mailto:hbrodbeck@gmail.com?subject=Charity Campaign 500">email the admin</a> and let him know what's going on.</p>
+	<p>If it's not too much trouble, <a href="mailto:<%=adminEmail%>?subject=Charity Campaign 500">email the admin</a> and let him know what's going on.</p>
 
 </div>
 
