--- a/views/app/admin.html
+++ b/views/app/admin.html
@@ -6,10 +6,10 @@
 	<h3>Administration</h3>
 	<ul class="unstyled menu">
 		<li>
-		<a href="/users/csv" class="btn">Upload a CSV of User Names</a>
+		<a href="/users/csv">Upload a CSV of User Names</a>
 		</li>
 		<li>
-		<a href="/admin" class="btn">Admin Options</a>
+		<a href="/admin">Admin Options</a>
 		</li>
 	</ul>
 	<%}%>
