csv is working and tested, messages display properly

--- a/views/user/csv.html
+++ b/views/user/csv.html
@@ -13,6 +13,9 @@
 	<h3>Administration</h3>
 	<ul class="unstyled menu">
 		<li>
+		<a href="/users">All Users</a>
+		</li>
+		<li>
 		<a href="/users/add" class="btn">Add a User</a>
 		</li>
 	</ul>
