--- a/views/user/index.html
+++ b/views/user/index.html
@@ -14,6 +14,9 @@
 		<li>
 		<a href="/users/add" class="btn">Add a User</a>
 		</li>
+		<li>
+		<a href="/users/csv" class="btn">Upload a List of Users</a>
+		</li>
 	</ul>
 	<%}%>
 </div>
