made tablesorter local

--- a/views/layout.html
+++ b/views/layout.html
@@ -17,7 +17,7 @@
 	<script type="text/javascript" src="/javascript/jquery.fancy_input.js"></script>
 	<script type="text/javascript" src="/javascript/jquery.fancy_suggest.js"></script>
 	<script type="text/javascript" src="/javascript/flot/jquery.flot.js"></script>
-	<script src="http://autobahn.tablesorter.com/jquery.tablesorter.min.js"></script>
+	<script type="text/javascript" src="/javascript/jquery.tablesorter.min.js"></script>
 	<script type="text/javascript" src="/javascript/scripts.js"></script>
 </head>
 <body>
