--- a/views/team/show.html
+++ b/views/team/show.html
@@ -4,8 +4,10 @@
 <div class="span4 columns">
 	<h3>Members</h3>
 	<ul class="unstyled">
+		<%if (team.members) {%>
 		<% for(var i=0; i < team.members.length; i++) {%>
 		<li><a href="/users/name/<%= team.members[i]%>"><%=team.members[i]%></a></li>
+		<%}%>
 		<%}%>
 	</ul>
 	
