--- a/views/user/show.html
+++ b/views/user/show.html
@@ -34,7 +34,7 @@
 	</div>
 	
 	<div class="clearfix">
-		<img class="gravatar" src="http://www.gravatar.com/avatar/<%=user.gravatar%>?s=96&d=identicon&r=PG" alt="" />
+		<a href="http://en.gravatar.com/emails/"><img class="gravatar" src="http://www.gravatar.com/avatar/<%=user.gravatar%>?s=96&d=identicon&r=PG" alt="" /></a>
 		
 		<div class="details">
 			<h1 class="title"><a href="/users/show/<%= user.id%>/<%= user.slug%>"><%= user.login%></a></h1>
