added dashboard, audit, various fixes

--- a/views/campaign/show.html
+++ b/views/campaign/show.html
@@ -83,8 +83,10 @@
 		<h2>Recent Items</h2>
 		<table class="common-table zebra-striped">
 		<thead>
-			<tr><th>Item</th>
-			<th>Points</th></tr>
+			<tr><th>Created</th>
+			<th>Item</th>
+			<th>Points</th>
+			<th>By</th></tr>
 		</thead>
 		<tbody>
 		<% for(var i=0; i < items.length; i++) {%>
