--- a/views/layout.html
+++ b/views/layout.html
@@ -29,6 +29,7 @@
         <div class="container">
           <ul>
     		<%if (campaignId) {%>
+    			<li><a href="/campaigns/dashboard/<%=campaignId%>">Dashboard</a></li>
 				<li><a href="/campaigns/show/<%=campaignId%>">Campaign</a></li>
 				<li><a href="/teams/filter/<%=campaignId%>">Teams</a></li>
 				<li><a href="/bonuses/filter/<%=campaignId%>">Bonuses</a></li>
