css changes, images

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,8 @@
 
 <div class="site">
   <div class="title">
-    <div class="header"><a href="/">Charity Campaign</a></div> <div class="subhead">Competing for Charity</div>
+    <div class="header"><a href="/">Charity Campaign</a></div><br />
+    <div class="subhead">Competing for Charity</div>
   </div>
   
   {{ content }}
