css changes, images

--- a/css/screen.css
+++ b/css/screen.css
@@ -160,6 +160,10 @@ ul.posts {
     .site .footer .rss img {
         border: 0;
     }
+    
+    .site .img {
+    	width: 40 em;
+    }
 
 /*****************************************************************************/
 /*
