change text justify

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,9 @@
     <div class="subhead">Competing for Charity</div>
   </div>
   
+  <div class="content">
   {{ content }}
+  </div>
   
   <div class="footer">
     <div class="contact">
