--- a/views/layout.html
+++ b/views/layout.html
@@ -10,13 +10,24 @@
     <link rel="stylesheet" href="/stylesheets/bootstrap-1.0.0.css" />
     <link rel="stylesheet" href="/stylesheets/jquery-ui-1.8.14.custom.css" />
     <link rel="stylesheet" href="/stylesheets/jquery.fancy_suggest.css" />
+    <link rel="stylesheet" href="/stylesheets/jquery.countdown.css" />
     
+    <!-- date/time picker -->
     <script type="text/javascript" src="/javascript/jquery-1.6.2.min.js"></script>
     <script type="text/javascript" src="/javascript/jquery-ui-1.8.14.custom.min.js"></script>
 	<script type="text/javascript" src="/javascript/jquery-ui-timepicker-addon.js"></script>
+	
+	<!-- type ahead for user screens -->
 	<script type="text/javascript" src="/javascript/jquery.fancy_input.js"></script>
 	<script type="text/javascript" src="/javascript/jquery.fancy_suggest.js"></script>
+	
+	<!-- graphing -->
 	<script type="text/javascript" src="/javascript/flot/jquery.flot.js"></script>
+	
+	<!-- countdown timers -->
+	<!-- http://keith-wood.name/countdown.html -->
+	<script type="text/javascript" src="/javascript/jquery.countdown.js"></script>
+	
 	<script type="text/javascript" src="/javascript/jquery.tablesorter.min.js"></script>
 	<script type="text/javascript" src="/javascript/scripts.js"></script>
 </head>
