--- a/views/item/edit.html
+++ b/views/item/edit.html
@@ -55,15 +55,21 @@
 			</div>
 			</div>
 			
-			
+			<%if (isAdmin) { %>
 			<div class="clearfix">
 			<label for="verified">Verified</label>
 			<div class="input">
-				<input type="checkbox" name="verified" value="verified" />
+				<input type="checkbox" name="verified" value="verified" <%if(item.verified) {%>checked<%}%> />
 			</div>
 			</div>
 			
-			
+			<div class="clearfix">
+			<label for="admin">Admin</label>
+			<div class="input">
+				<input type="checkbox" name="admin" value="admin" <%if(item.admin) {%>checked<%}%> />
+			</div>
+			</div>
+			<%}%>
 			
 			<input type="hidden" name="bonus" id="bonus" value="<%=item.bonus%>" />
 			<input type="hidden" name="guid" id="guid" value="<%=item._id%>" />
