minor updates to fix sponors, error checking, item lists

--- a/views/team/edit.html
+++ b/views/team/edit.html
@@ -134,7 +134,7 @@
 		// auto suggest for user box
 		$("#sponsor").fancy_suggest({
 			url: "/users/json",
-			callback: captain_callback,
+			callback: sponsor_callback,
 			tpl_result_begin: '<li class="result {{class}}" id="{{id}}" result_id="{{result_id}}"><a href="#">',
       		tpl_result_body: '<span class="title">{{title}}</span>',
       		tpl_result_end: '</li></a>'
