--- a/views/item/show.html
+++ b/views/item/show.html
@@ -32,6 +32,7 @@
 
 	<p>Points per Item: <%=item.points%></p>
 	<p>Bonus points per Item: <%=item.bonus%></p>
+	<p>Located in office: <%=item.office%></p>
 	
 	<p>Worth <%=(item.points + item.bonus) * item.quantity %> total points</p>
 	
