--- a/views/layout.html
+++ b/views/layout.html
@@ -44,6 +44,7 @@
 				<li><a href="/campaigns/show/<%=campaignId%>">Campaign</a></li>
 				<li><a href="/teams/filter/<%=campaignId%>">Teams</a></li>
 				<li><a href="/bonuses/filter/<%=campaignId%>">Bonuses</a></li>
+				<li><a href="/offices/filter/<%=campaignId%>">Offices</a></li>
 			<%} else {%>
 				<li><a href="/">Home</a></li>
 				<li><a href="/about">About</a></li>
