--- a/views/item/add.html
+++ b/views/item/add.html
@@ -36,6 +36,15 @@
 				</ul>
 			</div>
 		</div>
+		
+		<div class="clearfix">
+			<label for="office">Office</label>
+			<div class="input">
+			<% for(var i=0; i < offices.length; i++) {%>
+				<input type="radio" id="office" name="office" value="<%=offices[i].name%>" <%=(i==0)?"checked":""%>/><%=offices[i].name%><br />
+			<%}%>
+			</div>
+		</div>
 			
 		<input type="hidden" name="teamId" id="teamId" value="<%= teamId%>" />
 			
