--- a/views/campaign/show.html
+++ b/views/campaign/show.html
@@ -20,6 +20,9 @@
 		<a href="/teams/add/<%=campaign.id%>">Add Team</a>
 		</li>
 		<li>
+		<a href="/campaigns/audit/<%= campaign.id%>/true">Audit Campaign</a>
+		</li>
+		<li>
 		<a class="btn" href="/campaigns/edit/<%=campaign.id%>">Edit this Campaign</a>
 		</li>
 		<li>
