--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
       </p>
     </div>
     <div class="rss">
-    	<a href="http://feeds.feedburner.com/hross">
+    	<a href="https://github.com/hross/Charity-Campaign/commits/master.atom">
         	<img src="/images/rss.png" alt="Subscribe to RSS Feed" />
       	</a><br />
       	<a href="/">Home</a><br />
