add client side validation for itme submit using jquery.validate. closes #15. could add a lot more validation to other things (framework is there)

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -87,3 +87,15 @@
 .select-hidden {
 	display: none;
 }
+
+label.error {
+	float: none;
+	margin-left: 10px;
+	color: #FF0000;
+}
+
+.inputs-list label.error {
+	float: right;
+	margin-right: 100px;
+	color: #FF0000;
+}
