--- a/views/layout.html
+++ b/views/layout.html
@@ -28,6 +28,9 @@
 	<!-- http://keith-wood.name/countdown.html -->
 	<script type="text/javascript" src="/javascript/jquery.countdown.js"></script>
 	
+	<!-- form validation -->
+	<script type="text/javascript" src="/javascript/jquery.validate.min.js"></script>
+	
 	<script type="text/javascript" src="/javascript/jquery.tablesorter.min.js"></script>
 	<script type="text/javascript" src="/javascript/scripts.js"></script>
 </head>
