added modal dialog support to delete buttons. closes #9.

--- a/views/bonus/edit.html
+++ b/views/bonus/edit.html
@@ -13,7 +13,7 @@
 	<a class="btn" href="/bonuses/edit/<%=bonus.id%>">Edit this Bonus</a>
 	</li>
 	<li>
-	<a class="btn" href="/bonuses/destroy/<%=bonus.id%>">Delete this Bonus</a>
+	<a class="btn delete" href="/bonuses/destroy/<%=bonus.id%>">Delete this Bonus</a>
 	</li>
 	</ul>
 </div>
