--- a/views/bonus/show.html
+++ b/views/bonus/show.html
@@ -16,7 +16,7 @@
 		</a>
 		</li>
 		<li>
-		<a href="/bonuses/destroy/<%=bonus.id%>" class="btn">
+		<a href="/bonuses/destroy/<%=bonus.id%>" class="btn delete">
 			Delete this Bonus
 		</a>
 		</li>
