--- a/views/campaign/edit.html
+++ b/views/campaign/edit.html
@@ -9,7 +9,7 @@
 	<a href="/campaigns/edit/<%=campaign.id%>" class="btn">Edit this Campaign</a>
 	</li>
 	<li>
-	<a href="/campaigns/edit/<%=campaign.id%>" class="btn">Delete this Campaign</a>
+	<a href="/campaigns/edit/<%=campaign.id%>" class="btn delete">Delete this Campaign</a>
 	</li>
 	</ul>
 </div>
