--- a/views/campaign/show.html
+++ b/views/campaign/show.html
@@ -26,7 +26,7 @@
 		<a class="btn" href="/campaigns/edit/<%=campaign.id%>">Edit this Campaign</a>
 		</li>
 		<li>
-		<a class="btn" href="/campaigns/destroy/<%=campaign.id%>">Delete this Campaign</a>
+		<a class="btn delete" href="/campaigns/destroy/<%=campaign.id%>">Delete this Campaign</a>
 		</li>
 	</ul>
 	<%}%>
