--- a/views/item/edit.html
+++ b/views/item/edit.html
@@ -14,7 +14,7 @@
 		</li>
 		
 		<li class="button">
-		<a href="/items/destroy/<%=item.id%>" class="btn">Delete this Item</a>
+		<a href="/items/destroy/<%=item.id%>" class="btn delete">Delete this Item</a>
 		</li>
 	</ul>
 
