--- a/views/item/show.html
+++ b/views/item/show.html
@@ -16,7 +16,7 @@
 		<a class="btn" href="/items/edit/<%=item.id%>">Edit this Item</a>
 		</li>
 		<li>
-		<a class="btn" href="/items/destroy/<%=item.id%>">Delete this Item</a>
+		<a class="btn delete" href="/items/destroy/<%=item.id%>">Delete this Item</a>
 		</li>
 	</ul>
 	<%}%>
