--- a/views/itemtype/show.html
+++ b/views/itemtype/show.html
@@ -14,7 +14,7 @@
 	<a class="btn" href="/itemtypes/edit/<%=itemtype.id%>">Edit this Item Type</a>
 	</li>
 	<li>
-	<a class="btn" href="/itemtypes/destroy/<%=itemtype.id%>>">Delete this Item Type</a>
+	<a class="btn delete" href="/itemtypes/destroy/<%=itemtype.id%>>">Delete this Item Type</a>
 	</li>
 	</ul>
 	<%}%>
