--- a/views/office/edit.html
+++ b/views/office/edit.html
@@ -13,7 +13,7 @@
 	<a class="btn" href="/offices/edit/<%=office.id%>">Edit this Office</a>
 	</li>
 	<li>
-	<a class="btn" href="/offices/destroy/<%=office.id%>">Delete this Office</a>
+	<a class="btn delete" href="/offices/destroy/<%=office.id%>">Delete this Office</a>
 	</li>
 	</ul>
 </div>
