--- a/views/team/edit.html
+++ b/views/team/edit.html
@@ -14,7 +14,7 @@
 	<a class="btn" href="/teams/edit/<%=team.id%>">Edit this Team</a>
 	</li>
 	<li>
-	<a class="btn" href="/teams/destroy/<%=team.id%>">Delete this Team</a>
+	<a class="btn delete" href="/teams/destroy/<%=team.id%>">Delete this Team</a>
 	</li>
 	</ul>
 	<%}%>
