--- a/views/user/edit.html
+++ b/views/user/edit.html
@@ -19,7 +19,7 @@
 		<a href="/users/edit/<%=user.id%>" class="btn">Edit this User</a>
 		</li>
 		<li>
-		<a href="/users/destroy/<%=user.id%>" class="btn">Delete this User</a>
+		<a href="/users/destroy/<%=user.id%>" class="btn delete">Delete this User</a>
 		</li>
 	</ul>
 	<%}%>
