--- a/views/layout.html
+++ b/views/layout.html
@@ -60,6 +60,7 @@
     			<li><a href="/campaigns/dashboard/<%=campaignId%>">Dashboard</a></li>
 				<li><a href="/campaigns/show/<%=campaignId%>">Campaign</a></li>
 				<li><a href="/teams/filter/<%=campaignId%>">Teams</a></li>
+				<li><a href="/users/filter/<%=campaignId%>">Users</a></li>
 				<li><a href="/bonuses/filter/<%=campaignId%>">Bonuses</a></li>
 				<li><a href="/offices/filter/<%=campaignId%>">Offices</a></li>
 			<%} else {%>
