--- a/views/team/show.html
+++ b/views/team/show.html
@@ -6,7 +6,7 @@
 	<ul class="unstyled">
 		<%if (team.members) {%>
 		<% for(var i=0; i < team.members.length; i++) {%>
-		<li><a href="/users/name/<%= team.members[i]%>"><%=team.members[i]%></a></li>
+		<li><a href="/users/name/<%= team.members[i].login%>"><%=team.members[i].login%></a></li>
 		<%}%>
 		<%}%>
 	</ul>
@@ -63,9 +63,11 @@
 				<%}%>
 			</div>
 			<div class="info">
+				<% if (canLeave) {%>
 				<div class="additem">
 				<a href="/items/add/<%=team.id%>">Add an Item</a>
 				</div>
+				<%}%>
 			</div>
 			<div style="clear: both;">&nbsp;</div>
 		</div>
