--- a/views/bonus/show.html
+++ b/views/bonus/show.html
@@ -35,8 +35,22 @@
 	
 	<p>Worth <%=bonus.points%> points per item</p>
 	
-	
 	<p><%= bonus.description%></p>
+	
+	<div class="entry">		
+		<h2>Recent Items</h2>
+		<ul>
+		<% for(var i=0; i < items.length; i++) {%>
+			<li><%=items[i].created_at_format%> - <a href="/items/show/<%= items[i].id%>/<%= items[i].slug%>"><%=items[i].quantity%> <%= items[i].name %></a>
+			(<%=(items[i].points + items[i].bonus) * items[i].quantity %> points)
+			
+			<%if (!items[i].admin) {%>
+			 by <a href="/users/name/<%=items[i].created_by_login%>"><%=items[i].created_by_login%></a>
+			 <%}%>
+			</li>
+		<%}%>
+		</ul>
+	</div>
 	
 	<input type="hidden" name="campaignId" id="campaignId" value="<%= bonus.campaignId%>" />
 	
