created_by_login modifications to store user login for created items. closes #33.

--- a/views/item/edit.html
+++ b/views/item/edit.html
@@ -84,7 +84,7 @@
 			<input type="hidden" name="guid" id="guid" value="<%=item._id%>" />
 			<input type="hidden" name="teamId" id="teamId" value="<%=item.teamId%>" />
 			<input type="hidden" name="campaignId" id="campaignId" value="<%=item.campaignId%>" />
-			<input type="hidden" name="created_by" id="created_by" value="<%=item.created_by%>" />
+			<input type="hidden" name="created_by" id="created_by_login" value="<%=item.created_by_login%>" />
 			
 			<div class="actions">
 				<input class="btn" type="submit" value="Update" />
