added functionality for users to flag items. closes #3

--- a/views/item/show.html
+++ b/views/item/show.html
@@ -35,7 +35,7 @@
 	<p>Located in office: <%=item.office%></p>
 	
 	<!-- flagging section only shows up if this item is unverified -->
-	<%if (!item.verified) {%>
+	<%if (!item.verified && canFlag) {%>
 	<%if (item.flagged) {%>
 		<p>Flagged by <%=item.flagged_by%></p>
 	<%} else {%>
