tested csv upload with team/campaign. fixed some bugs and added description to upload, plus another example file

--- a/views/user/csv.html
+++ b/views/user/csv.html
@@ -36,7 +36,9 @@
 			</div>
 			
 			<div class="clearfix">
-				<a href="/assets/users.csv">Download an example CSV</a>
+				<p>You can upload a CSV if you want to create a bunch of users. You need to follow the format used by the examples below. If you are going to assign teams you also need to include campaigns. Both teams and campaigns can only be referenced by their ID (in the URL). You can only assign one campaign/team per user. Account can be blank, but still needs to be a column in the CSV if you want teams and campaigns.</p>
+				<a href="/assets/users.csv">Download an example CSV</a><br /><br />
+				<a href="/assets/users_teams.csv">Download an example CSV with team/campaign assignment</a>
 			</div>
 			
 			<div class="actions">
