added a way to upload items via CSV

--- a/views/app/admin.html
+++ b/views/app/admin.html
@@ -9,6 +9,9 @@
 		<a href="/users/csv">Upload a CSV of User Names</a>
 		</li>
 		<li>
+		<a href="/items/csv">Upload a CSV of Items</a>
+		</li>
+		<li>
 		<a href="/admin">Admin Options</a>
 		</li>
 	</ul>
